--- a/Original Code/seed_path_raytrace.ipynb
+++ b/Original Code/seed_path_raytrace.ipynb
@@ -1,21 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "seed_path_raytrace.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMoqwU3CpxZOy3V2QUQvo6e"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -23,24 +10,24 @@
         "id": "wwOFvvZV5IkW",
         "outputId": "96e385f9-48ac-4d8e-da68-25d91474507e"
       },
-      "source": [
-        "!pip install trimesh"
-      ],
-      "execution_count": 46,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: trimesh in /usr/local/lib/python3.6/dist-packages (3.8.18)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from trimesh) (50.3.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from trimesh) (1.18.5)\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "!pip install trimesh"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,13 +35,9 @@
         "id": "2qP9t6VRFn4h",
         "outputId": "394233b5-db65-47ea-ca27-37dfee83955f"
       },
-      "source": [
-        "!apt install libspatialindex-dev\n",
-        "!pip install rtree"
-      ],
-      "execution_count": 47,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Reading package lists... Done\n",
@@ -97,13 +80,17 @@
             "Successfully built rtree\n",
             "Installing collected packages: rtree\n",
             "Successfully installed rtree-0.9.4\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "!apt install libspatialindex-dev\n",
+        "!pip install rtree"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -111,6 +98,15 @@
         "id": "iGGftzN55K6U",
         "outputId": "b3d415e9-02a2-4ad5-8e86-43e6aa602c30"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "from os.path import join\n",
@@ -119,34 +115,25 @@
         "PROJ = 'My Drive/draping_workspace'       # path to your project on Drive\n",
         "\n",
         "drive.mount(ROOT)"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "hON0Wn1K5K97"
       },
+      "outputs": [],
       "source": [
         "import trimesh\n",
         "import numpy as np\n",
         "from scipy.spatial import distance\n",
         "import matplotlib.pyplot as plt"
-      ],
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 97,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -155,29 +142,8 @@
         "id": "Tg_LuVSD5LFe",
         "outputId": "b3f93da1-e2b1-4801-eadf-3508b73ebc7a"
       },
-      "source": [
-        "import trimesh.transformations as tf\n",
-        "curved_mesh = trimesh.load('/content/drive/My Drive/draping_workspace/3d_shape.obj',process=False)\n",
-        "flat_mesh = trimesh.load('/content/drive/My Drive/draping_workspace/2d_shape_flatmesh_99pc.obj',process=False)\n",
-        "scene = trimesh.Scene(base_frame='world')\n",
-        "curved_mesh.apply_scale(0.01)\n",
-        "flat_mesh.apply_scale(0.01)\n",
-        "\n",
-        "transform = tf.translation_matrix([-0.1,-0.3,0.3])\n",
-        "flat_mesh.apply_transform(transform)\n",
-        "f_id = scene.add_geometry(flat_mesh)\n",
-        "\n",
-        "transform = tf.translation_matrix([-0.1,-0.3,-0.5])\n",
-        "curved_mesh.apply_transform(transform)\n",
-        "c_id = scene.add_geometry(curved_mesh)\n",
-        "\n",
-        "flat_mesh.visual.face_colors = [200, 100, 100, 100]\n",
-        "scene.show()"
-      ],
-      "execution_count": 97,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<iframe srcdoc=\"<!DOCTYPE html>\n",
@@ -1432,18 +1398,40 @@
               "<IPython.core.display.HTML object>"
             ]
           },
+          "execution_count": 97,
           "metadata": {
             "tags": []
           },
-          "execution_count": 97
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "import trimesh.transformations as tf\n",
+        "curved_mesh = trimesh.load('/content/drive/My Drive/draping_workspace/3d_shape.obj',process=False)\n",
+        "flat_mesh = trimesh.load('/content/drive/My Drive/draping_workspace/2d_shape_flatmesh_99pc.obj',process=False)\n",
+        "scene = trimesh.Scene(base_frame='world')\n",
+        "curved_mesh.apply_scale(0.01)\n",
+        "flat_mesh.apply_scale(0.01)\n",
+        "\n",
+        "transform = tf.translation_matrix([-0.1,-0.3,0.3])\n",
+        "flat_mesh.apply_transform(transform)\n",
+        "f_id = scene.add_geometry(flat_mesh)\n",
+        "\n",
+        "transform = tf.translation_matrix([-0.1,-0.3,-0.5])\n",
+        "curved_mesh.apply_transform(transform)\n",
+        "c_id = scene.add_geometry(curved_mesh)\n",
+        "\n",
+        "flat_mesh.visual.face_colors = [200, 100, 100, 100]\n",
+        "scene.show()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 98,
       "metadata": {
         "id": "u-WIngK05VsY"
       },
+      "outputs": [],
       "source": [
         "handles = [302, 198, 2, 23]\n",
         "segments = 30\n",
@@ -1471,12 +1459,11 @@
         "    path_vis = trimesh.load_path(path.squeeze())\n",
         "\n",
         "    scene.add_geometry(path_vis)"
-      ],
-      "execution_count": 98,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 99,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1485,13 +1472,8 @@
         "id": "lkckx5E9DzWl",
         "outputId": "d7bacc82-76bb-498b-99b4-1de21e4f9d35"
       },
-      "source": [
-        "scene.show()"
-      ],
-      "execution_count": 99,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<iframe srcdoc=\"<!DOCTYPE html>\n",
@@ -2746,15 +2728,20 @@
               "<IPython.core.display.HTML object>"
             ]
           },
+          "execution_count": 99,
           "metadata": {
             "tags": []
           },
-          "execution_count": 99
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "scene.show()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 102,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2762,6 +2749,20 @@
         "id": "LkdsVkCCRQPJ",
         "outputId": "9edf3c01-9636-43f8-b3ba-9fea03df7764"
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(4, 30, 3)"
+            ]
+          },
+          "execution_count": 102,
+          "metadata": {
+            "tags": []
+          },
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "\n",
         "import trimesh\n",
@@ -2804,22 +2805,21 @@
         "    trajectories.append(path)\n",
         "\n",
         "np.array(trajectories).shape"
-      ],
-      "execution_count": 102,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(4, 30, 3)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 102
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMoqwU3CpxZOy3V2QUQvo6e",
+      "collapsed_sections": [],
+      "name": "seed_path_raytrace.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
