--- a/diffpysics.ipynb
+++ b/diffpysics.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "435ec703-08cb-4f7f-b090-1683e051f53c",
    "metadata": {},
    "outputs": [
@@ -19,6 +19,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/home/jjdunlop/draping_playground\n",
+      "Working path is: /home/jjdunlop/draping_playground\n",
       "/home/jjdunlop/draping_playground/diffsim/pysim\n",
       "# conda environments:\n",
       "#\n",
@@ -31,10 +33,13 @@
     }
    ],
    "source": [
-    "# Check that the correct runtime is enabled and active\n",
-    "%cd ~/draping_playground/diffsim/pysim\n",
-    "working_path = \"/home/jjdunlop/draping_playground/\"\n",
+    "import os\n",
+    "%cd ~/draping_playground/\n",
+    "# Get the current working directory\n",
+    "working_path = os.getcwd()\n",
+    "print('Working path is: ' + working_path)\n",
     "\n",
+    "%cd ~/draping_playground/diffsim/pysim\n",
     "!conda info --env\n",
     "!python --version\n",
     "!pwd"
@@ -42,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "70c07dba-3558-434a-9e60-a96da102542c",
    "metadata": {},
    "outputs": [
@@ -60,8 +65,8 @@
     "import json\n",
     "\n",
     "# Define the paths as variables\n",
-    "cloth_mesh_path = \"/home/jjdunlop/draping_playground/3D_Models/2d_shape_flatmesh_99pc.obj\"\n",
-    "obstacle_mesh_path = \"/home/jjdunlop/draping_playground/3D_Models/3d_shape.obj\"\n",
+    "cloth_mesh_path = working_path + \"/3D_Models/2d_shape_flatmesh_99pc.obj\"\n",
+    "obstacle_mesh_path = working_path + \"/3D_Models/3d_shape.obj\"\n",
     "\n",
     "# Define the configuration dictionary\n",
     "config = {\n",
@@ -98,7 +103,7 @@
     "}\n",
     "\n",
     "# Now we write the config to a JSON file\n",
-    "config_file = '/home/jjdunlop/draping_playground/diffsim/pysim/conf/curved_draping.json' # We are writing to the writable directory\n",
+    "config_file = working_path + '/diffsim/pysim/conf/curved_draping.json' # We are writing to the writable directory\n",
     "with open(config_file, 'w') as f:\n",
     "    json.dump(config, f, indent=4)\n",
     "\n",
@@ -107,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "4e429124-ab60-48bb-aa8f-d40878448d2e",
    "metadata": {},
    "outputs": [],
@@ -174,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "fe46a921-1dff-4896-b2e0-8c5e8bc083a6",
    "metadata": {},
    "outputs": [
@@ -185,25 +190,21 @@
       "/home/jjdunlop/draping_playground/diffsim/pysim\n",
       "=======================================\n",
       "Next Simulation Starting\n",
-      "epoch 0:  loss=13.348705828652356 \n",
-      "\n",
-      "forward time=38.415716886520386\n",
-      "backward time=38.864098072052\n",
-      "=======================================\n",
-      "Next Simulation Starting\n",
-      "epoch 1:  loss=11.184798473880434 \n",
-      "\n",
-      "forward time=46.63276791572571\n",
-      "backward time=41.33958864212036\n",
-      "=======================================\n",
-      "Next Simulation Starting\n",
-      "epoch 2:  loss=10.424213846119091 \n",
-      "\n",
-      "forward time=47.94053840637207\n",
-      "backward time=42.01633048057556\n",
-      "=======================================\n",
-      "Next Simulation Starting\n",
-      "step 40/40\r"
+      "step 7/40\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-7feab6f54859>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mcur_step\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtot_step\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 141\u001b[0;31m     \u001b[0mdo_train\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur_step\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mscheduler\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msim\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparam_v\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    142\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"done\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-23-7feab6f54859>\u001b[0m in \u001b[0;36mdo_train\u001b[0;34m(cur_step, optimizer, scheduler, sim, param_v)\u001b[0m\n\u001b[1;32m    100\u001b[0m     \u001b[0mreset_sim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m     \u001b[0mst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 102\u001b[0;31m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_sim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msteps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam_v\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m     \u001b[0men0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-23-7feab6f54859>\u001b[0m in \u001b[0;36mrun_sim\u001b[0;34m(steps, sim, param_v)\u001b[0m\n\u001b[1;32m     77\u001b[0m     \u001b[0;31m#     loss += torch.norm(sim.obstacles[0].curr_state_mesh.nodes[i].x - sim.cloths[0].mesh.nodes[i].x, p=1) #* (1 + ((step-pre_steps)/steps))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m     \u001b[0marcsim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msim_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m   \u001b[0mloss_idxs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mboundary\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/draping_playground/diffsim/pysim/taucs_py.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(ctx, A, b, ind)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mTaucsFunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFunction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0;34m@\u001b[0m\u001b[0mstaticmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mind\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m                 \u001b[0;31m#print(A)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -223,7 +224,7 @@
     "now = datetime.now()\n",
     "timestamp = datetime.now().strftime('%Y-%m-%d_%H:%M:%S')\n",
     "\n",
-    "out_path = '/home/jjdunlop/draping_playground/curved_draping_default_out'\n",
+    "out_path = working_path + '/curved_draping_default_out'\n",
     "\n",
     "if not os.path.exists(out_path):\n",
     "  os.mkdir(out_path)\n",
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8cf0abce",
    "metadata": {},
    "outputs": [
@@ -373,7 +374,7 @@
     "import arcsim\n",
     "\n",
     "with torch.autograd.profiler.profile() as prof:\n",
-    "\t  arcsim.msim(4,['arcsim','replay','/home/jjdunlop/draping_playground/curved_draping_default_out/out', '0.0'])\n",
+    "\t  arcsim.msim(4,['arcsim','replay',working_path + '/curved_draping_default_out/out', '0.0'])\n",
     "print(prof)"
    ]
   }
